# ioio-advisor

./: .gitignore  Dockerfile  Dockerfile.designer  Dockerfile.intention  Dockerfile.reasoner  Dockerfile.retriever  Dockerfile.writer  Makefile  README.md  debug_request.py  deploy_to_aws.sh  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  run_agents.py  run_agents_2.py  run_agents_3.py  run_agents_4.py  run_flow.py  run_server.py  run_tests.py  test_intention_agent.sh  test_request.py
scripts/: start_app.py
src/agents/: designer_agent.py  designer_service.py  intention_agent.py  intention_service.py  reason_agent.py  reason_service.py  retriever_agent.py  retriever_service.py  writer_agent.py  writer_service.py
src/application/: agent_coordinator.py
src/domain/: models.py
src/infrastructure/: docker-compose.yml  main.tf
src/infrastructure/api/: main.py
src/infrastructure/k8s/: app-deployment.yaml  designer-agent-deployment.yaml  intention-agent-deployment.yaml  reasoner-agent-deployment.yaml  (+2 more)
src/ports/: agent_port.py
static/: index.html
tests/: test_agent_flow.py  test_api.py  test_flow.py  test_reason_agent.py  test_utils.py
tests/e2e/: conftest.py  test_economic_responses.py  test_frontend.py  test_image_generation.py  test_live_data_queries.py
tests/integration/: test_agent_flow_debug.py  test_dollar_query_flow.py  test_economic_queries.py
tests/system/: test_financial_agent_system.py
tests/unit/: test_designer_agent.py  test_intention_agent.py  test_reason_agent.py  test_retriever_agent.py  test_writer_agent.py
(+1 files in other folders)
